fix: scrollbars (#283)
* fix: fixed scrolbar behavior

* feat: added filter and sortet functions

* feat: added new icons

--- a/Frontend/src/components/core/ContextMenu/contextMenu.module.scss
+++ b/Frontend/src/components/core/ContextMenu/contextMenu.module.scss
@@ -3,6 +3,7 @@ $orange: rgb(232, 78, 26);
 $white: rgb(255, 255, 255);
 $gray: rgb(189, 189, 189);
 $black: rgb(0, 0, 0);
+$grayBckground: #cfcfcf;
 
 .toolbar {
   background-color: $white;
@@ -50,6 +51,14 @@ $black: rgb(0, 0, 0);
       // }
     }
   }
+}
+
+.toolbar-text-filter {
+	background-color: $grayBckground;
+	padding: 14px;
+	font-weight: 400;
+	font-size: 16px;
+	border: none;
 }
 
 .toolbar-outside {
